--- a/package.json
+++ b/package.json
@@ -21,5 +21,12 @@
   "dependencies": {
     "gulp-cli": "gulpjs/gulp-cli#4.0",
     "jspm": "^0.16.13"
+  },
+  "jspm": {
+    "dependencies": {},
+    "devDependencies": {
+      "traceur": "github:jmcriffey/bower-traceur@0.0.92",
+      "traceur-runtime": "github:jmcriffey/bower-traceur-runtime@0.0.92"
+    }
   }
 }
