--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "character-manager",
   "version": "1.0.0",
-  "description": "Having some fun for Blizzard",
+  "description": "Having some fun",
   "scripts": {},
   "repository": {
     "type": "git",
@@ -23,7 +23,10 @@
     "jspm": "^0.16.13"
   },
   "jspm": {
-    "dependencies": {},
+    "dependencies": {
+      "angular": "github:angular/bower-angular@^1.4.7",
+      "ui-router": "npm:ui-router@^0.2.15"
+    },
     "devDependencies": {
       "traceur": "github:jmcriffey/bower-traceur@0.0.92",
       "traceur-runtime": "github:jmcriffey/bower-traceur-runtime@0.0.92"
