--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
   "jspm": {
     "dependencies": {
       "angular": "github:angular/bower-angular@^1.4.7",
+      "angular-material": "github:angular/bower-material@^0.11.4",
+      "angular-messages": "github:angular/bower-angular-messages@^1.4.7",
+      "angular-resource": "github:angular/bower-angular-resource@^1.4.7",
+      "material-design-iconic-font": "npm:material-design-iconic-font@^2.1.2",
       "ui-router": "npm:ui-router@^0.2.15"
     },
     "devDependencies": {
