--- a/package.json
+++ b/package.json
@@ -19,8 +19,21 @@
   },
   "homepage": "https://github.com/patrickmichalina/CharacterManager-Client#readme",
   "dependencies": {
-    "gulp-cli": "gulpjs/gulp-cli#4.0",
-    "jspm": "^0.16.13"
+    "browser-sync": "^2.9.11",
+    "compression": "^1.6.0",
+    "connect-history-api-fallback": "^1.1.0",
+    "express": "^4.13.3",
+    "gulp": "gulpjs/gulp#4.0",
+    "jspm": "^0.16.13",
+    "gulp-gzip": "^1.2.0",
+    "gulp-html-replace": "^1.5.4",
+    "gulp-minify-html": "^1.0.4",
+    "gulp-rename": "^1.2.2",
+    "gulp-replace": "^0.5.4",
+    "gulp-uglify": "^1.4.1",
+    "gulp-util": "^3.0.7",
+    "serve-favicon": "^2.3.0",
+    "systemjs-builder": "^0.13.6"
   },
   "jspm": {
     "dependencies": {
@@ -28,10 +41,15 @@
       "angular-material": "github:angular/bower-material@^0.11.4",
       "angular-messages": "github:angular/bower-angular-messages@^1.4.7",
       "angular-resource": "github:angular/bower-angular-resource@^1.4.7",
-      "material-design-iconic-font": "npm:material-design-iconic-font@^2.1.2",
-      "ui-router": "npm:ui-router@^0.2.15"
+      "angular-ui-router": "github:angular-ui/ui-router@^0.2.15",
+      "material-design-iconic-font": "npm:material-design-iconic-font@^2.1.2"
     },
     "devDependencies": {
+      "babel": "npm:babel-core@^5.8.24",
+      "babel-runtime": "npm:babel-runtime@^5.8.24",
+      "core-js": "npm:core-js@^1.1.4",
+      "css": "github:systemjs/plugin-css@^0.1.19",
+      "text": "github:systemjs/plugin-text@^0.0.2",
       "traceur": "github:jmcriffey/bower-traceur@0.0.92",
       "traceur-runtime": "github:jmcriffey/bower-traceur-runtime@0.0.92"
     }
